Some more cleanup work.
git-svn-id: https://svn.apache.org/repos/asf/cxf/trunk@1395513 13f79535-47bb-0310-9956-ffa450edef68